fix(dropdown menu): Remove custom padding and margin settings on dropdown menu due to Logseq update causing layout issues.

--- a/output/things.css
+++ b/output/things.css
@@ -3755,12 +3755,6 @@ a {
   padding: 0.25rem;
 }
 
-/* Fix Dropdown Wrapper inner margin */
-.dropdown-wrapper > div {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-}
-
 /* Fix margins for favorite and recent items */
 .cp__sidebar-left-layout .recent ul .recent-item a,
 .cp__sidebar-left-layout .favorites ul .favorite-item a {
@@ -3923,12 +3917,6 @@ i.ti {
 /* ------- */
 /*  Menus  */
 /* ------- */
-
-/* Add padding around menus */
-.dropdown-wrapper,
-#custom-context-menu {
-  padding: 4px;
-}
 
 .dropdown-wrapper .py-2,
 #custom-context-menu .py-2,
